syntax = "proto3";

package protogen;

option go_package = "github.com/becosuke/golang-examples/kvstore/internal/protogen";

import "google/api/annotations.proto";
import "google/protobuf/empty.proto";
import "validate/validate.proto";

service KVStoreService {
  rpc CreatePack (CreatePackRequest) returns (CreatePackResponse) {
    option (google.api.http) = {
      post: "/v1/pack"
      body: "*"
    };
  }
  rpc GetPack (GetPackRequest) returns (GetPackResponse) {
    option (google.api.http) = {
      get: "/v1/pack/{seal.key}"
    };
  }
  rpc UpdatePack (UpdatePackRequest) returns (UpdatePackResponse) {
    option (google.api.http) = {
      put: "/v1/pack/{pack.key}"
      body: "*"
    };
  }
  rpc DeletePack (DeletePackRequest) returns (google.protobuf.Empty) {
    option (google.api.http) = {
      delete: "/v1/pack/{seal.key}"
    };
  }
}

message CreatePackRequest {
  Pack pack = 1 [(validate.rules).message.required = true];
}
message CreatePackResponse {
  Pack pack = 1;
}
message GetPackRequest {
  Seal seal = 1 [(validate.rules).message.required = true];
}
message GetPackResponse {
  Pack pack = 1;
}
message UpdatePackRequest {
  Pack pack = 1 [(validate.rules).message.required = true];
}
message UpdatePackResponse {
  Pack pack = 1;
}
message DeletePackRequest {
  Seal seal = 1 [(validate.rules).message.required = true];
}

message Pack {
  string key = 1 [(validate.rules).string = {min_len:1, max_len:128}];
  string value = 2 [(validate.rules).string = {min_len:1, max_len:128}];
}
message Seal {
  string key = 1 [(validate.rules).string = {min_len:1, max_len:128}];
}
